regression_tests/snap/check/teststm2.err
================================================================================

                          PROGRAM SNAP  Version 2.7.10

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Jun 18 2018 09:20:21

================================================================================
                     Run at 18-JUN-2018 09:34:48 by ccrook




================================================================================
                                                            18-JUN-2018 09:34:48

                                 ERROR SUMMARY

================================================================================

Error: Cannot use add_coordinate_file before coordinate_file is loaded
       Line 2: File teststm2.snp

Error: The command file is not correct
