regression_tests/snap/check/teststm2.lst
================================================================================

                          PROGRAM SNAP  Version 2.7.10

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Jun 18 2018 09:20:21

================================================================================
                     Run at 18-JUN-2018 09:34:48 by ccrook




================================================================================
Regression tests - multiple coordinate files                18-JUN-2018 09:34:48

                                     ERRORS

================================================================================

Note: 2 errors reported in teststm2.err
